; ModuleID = '/home/carl/AnghaBench/linux/drivers/remoteproc/extr_remoteproc_core.c_rproc_coredump_add_segment.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/remoteproc/extr_remoteproc_core.c_rproc_coredump_add_segment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rproc = type { i32 }
%struct.rproc_dump_segment = type { i64, i32, i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rproc_coredump_add_segment(%struct.rproc* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.rproc*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca %struct.rproc_dump_segment*, align 8
  store %struct.rproc* %0, %struct.rproc** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %9 = load i32, i32* @GFP_KERNEL, align 4
  %10 = call %struct.rproc_dump_segment* @kzalloc(i32 16, i32 %9)
  store %struct.rproc_dump_segment* %10, %struct.rproc_dump_segment** %8, align 8
  %11 = load %struct.rproc_dump_segment*, %struct.rproc_dump_segment** %8, align 8
  %12 = icmp ne %struct.rproc_dump_segment* %11, null
  br i1 %12, label %16, label %13

13:                                               ; preds = %3
  %14 = load i32, i32* @ENOMEM, align 4
  %15 = sub nsw i32 0, %14
  store i32 %15, i32* %4, align 4
  br label %28

16:                                               ; preds = %3
  %17 = load i32, i32* %6, align 4
  %18 = load %struct.rproc_dump_segment*, %struct.rproc_dump_segment** %8, align 8
  %19 = getelementptr inbounds %struct.rproc_dump_segment, %struct.rproc_dump_segment* %18, i32 0, i32 2
  store i32 %17, i32* %19, align 4
  %20 = load i64, i64* %7, align 8
  %21 = load %struct.rproc_dump_segment*, %struct.rproc_dump_segment** %8, align 8
  %22 = getelementptr inbounds %struct.rproc_dump_segment, %struct.rproc_dump_segment* %21, i32 0, i32 0
  store i64 %20, i64* %22, align 8
  %23 = load %struct.rproc_dump_segment*, %struct.rproc_dump_segment** %8, align 8
  %24 = getelementptr inbounds %struct.rproc_dump_segment, %struct.rproc_dump_segment* %23, i32 0, i32 1
  %25 = load %struct.rproc*, %struct.rproc** %5, align 8
  %26 = getelementptr inbounds %struct.rproc, %struct.rproc* %25, i32 0, i32 0
  %27 = call i32 @list_add_tail(i32* %24, i32* %26)
  store i32 0, i32* %4, align 4
  br label %28

28:                                               ; preds = %16, %13
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local %struct.rproc_dump_segment* @kzalloc(i32, i32) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
